[package]
name = "discorust"
version = "0.1.0-alpha0"
authors = [
    "Awayume <dev@awayume.jp>",
]
edition = "2021"
rust-version = "1.70"
description = "An API wrapper for Discord written in Rust."
documentation = ""
readme = "./README.md"
homepage = ""
repository = "https://github.com/Awayume/Discorust"
license = "Apache-2.0"
keywords = [
    "discord",
    "api",
    "api-wrapper",
    "bot",
    "chat"
]
categories = [
    "api-bindings",
    "network-programming",
    "web-programming",
    "web-programming::http-client",
    "web-programming::websocket",
]
publish = false


[dependencies]
async-trait = "0.1.73"
once_cell = "1.18.0"
tokio = "1.32.0"
tokio-tungstenite = "0.20.0"

[dependencies.query_params]
version = "0.1.0"
optional = true

[dependencies.reqwest]
version = "0.11.20"
features = ["gzip", "json"]
optional = true

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
optional = true


[dev-dependencies]


[features]
default = ["default_no_backend", "rustls_backend"]
default_native_tls = ["default_no_backend", "native_tls_backend"]

default_no_backend = ["http", "utils"]

rustls_backend = ["reqwest/rustls", "tokio-tungstenite/rustls"]

native_tls_backend = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]

http = ["query_params", "reqwest", "serde"]
http3 = ["http", "reqwest/http3"]
utils = []


[workspace]
members = []
