[package]
name = "discorust"
version = "0.1.0-alpha0"
authors = [
    "Awayume <dev@awayume.jp>",
]
edition = "2021"
rust-version = "1.70"
description = "An API wrapper for Discord written in Rust."
documentation = ""
readme = "./README.md"
homepage = ""
repository = "https://github.com/Awayume/Discorust"
license = "Apache-2.0"
keywords = [
    "discord",
    "api",
    "api-wrapper",
    "bot",
    "chat"
]
categories = [
    "api-bindings",
    "network-programming",
    "web-programming",
    "web-programming::http-client",
    "web-programming::websocket",
]
publish = false


[dependencies]
async-trait = "0.1.73"
once_cell = "1.18.0"
tokio = "1.32.0"
tokio-tungstenite = "0.20.0"

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]
optional = true

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.105"
optional = true

[dependencies.url]
version = "2.4.1"
optional = true


[dev-dependencies]


[features]
default = ["default_no_backend", "rustls_backend"]
default_native_tls = ["default_no_backend", "native_tls_backend"]

default_no_backend = ["http", "http_compression_gzip", "utils"]

rustls_backend = ["reqwest/rustls", "tokio-tungstenite/rustls"]

native_tls_backend = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]

http = ["reqwest", "serde", "serde_json", "url"]
http3 = ["http", "reqwest/http3"]
http_compression_gzip = ["reqwest/gzip"]
http_compression_brotli = ["reqwest/brotli"]
http_compression_deflate = ["reqwest/deflate"]

utils = []


[workspace]
members = []

[workspace.dependencies]
